updating black excludes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,19 @@ py36 = true
 include = '\.pyi?$'
 exclude = '''
 /(
-    \.git
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
   | \.venv
-  | \.pytest_cache
-  | \.staticfiles
-
+  | _build
+  | buck-out
+  | build
+  | dist
   # The following are specific to Black, you probably don't want those.
   | blib2to3
   | tests/data
+  | profiling
 )/
 '''
