--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,16 @@ repos:
     rev: stable
     hooks:
       - id: black
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.7.9
     hooks:
       - id: flake8
-        additional_dependencies: ["flake8-bugbear"]
+        # TODO: remove git dependencies when walrus operator fixed in pycodestyle release
+        additional_dependencies: [
+          '-e', 'git+https://github.com/pycqa/pyflakes@1911c20#egg=pyflakes',
+          '-e', 'git+https://github.com/pycqa/pycodestyle@d219c68#egg=pycodestyle',
+          "flake8-bugbear"
+        ]
   - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
     rev: v1.0.4
     hooks:
@@ -17,7 +22,7 @@ repos:
         args: [-ll]
         files: .py$
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
+    rev: v1.9.4
     hooks:
       - id: seed-isort-config
   - repo: https://github.com/pre-commit/mirrors-isort
