--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,22 +5,29 @@ repos:
     rev: stable
     hooks:
       - id: black
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.7.9
     hooks:
       - id: flake8
-        additional_dependencies: ["flake8-bugbear"]
+        # TODO: remove git dependencies when walrus operator fixed
+        additional_dependencies: [
+          '-e', 'git+https://github.com/pycqa/pyflakes@1911c20#egg=pyflakes',
+          '-e', 'git+https://github.com/pycqa/pycodestyle@d219c68#egg=pycodestyle',
+          "flake8-bugbear"
+        ]
   - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
     rev: v1.0.4
     hooks:
       - id: python-bandit-vulnerability-check
-        args: [-ll]
+        args: ["-ll"]
         files: .py$
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
+    rev: v2.1.1
     hooks:
       - id: seed-isort-config
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+  - repo: https://github.com/timothycrosley/isort
+    # 4.3.21-2 is broken
+    # https://github.com/timothycrosley/isort/issues/1154
+    rev: 4.3.21
     hooks:
       - id: isort
