--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,26 +6,23 @@ repos:
     hooks:
       - id: black
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+    rev: 3.8.3
     hooks:
       - id: flake8
-        # TODO: remove git dependencies when walrus operator fixed in pycodestyle release
-        additional_dependencies: [
-          '-e', 'git+https://github.com/pycqa/pyflakes@1911c20#egg=pyflakes',
-          '-e', 'git+https://github.com/pycqa/pycodestyle@d219c68#egg=pycodestyle',
-          "flake8-bugbear"
-        ]
+        additional_dependencies: ["flake8-bugbear"]
   - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
     rev: v1.0.4
     hooks:
       - id: python-bandit-vulnerability-check
-        args: [-ll]
+        args: ["-ll"]
         files: .py$
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.4
+    rev: v2.2.0
     hooks:
       - id: seed-isort-config
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+  - repo: https://github.com/timothycrosley/isort
+    # 4.3.21-2 is broken
+    # https://github.com/timothycrosley/isort/issues/1154
+    rev: 4.3.21
     hooks:
       - id: isort
