--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,10 +10,10 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: ["flake8-bugbear"]
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
-    rev: v1.0.4
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.6.2
     hooks:
-      - id: python-bandit-vulnerability-check
+      - id: bandit
         args: ["-ll"]
         files: .py$
   - repo: https://github.com/asottile/seed-isort-config
